--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,7 @@ section img {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+#search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -99,7 +99,7 @@ section img {
     color: #ffffff;
 }
 
-.online-reputation-management {
+#online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -108,7 +108,7 @@ section img {
     color: #ffffff;
 }
 
-.social-media-marketing {
+#social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -117,19 +117,19 @@ section img {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+#search-engine-optimization img {
     max-height: 200px;
     float: left;
     margin-right: 25px;
 }
 
-.online-reputation-management img {
+#online-reputation-management img {
     max-height: 200px;
     float: right;
     margin-left: 25px;
 }
 
-.social-media-marketing img {
+#social-media-marketing img {
     max-height: 200px;
     float: left;
     margin-right: 25px;
