--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ a {
 p {
   font-size: 16px;
 }
-
+/* sets a background image and detrmines it's size */
 .hero {
   height: 800px;
   width: 100%;
@@ -57,13 +57,14 @@ p {
   background-size: cover;
   background-position: center;
 }
-
+/* sets width, display and margin for the main element */
 main {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
-
+/* sets measurements for the aside element */
+/* /* floats aside the the right, sets font type and background color */
 aside {
   margin-right: 20px;
   padding: 20px;
@@ -74,23 +75,25 @@ aside {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
 }
-
+/* sets margin and font color for the section */
 section {
   margin-bottom: 32px;
   color: #ffffff;
 }
-
+/* sets margin and alignment for h3 children in the section element */
 section h3 {
   margin-bottom: 10px;
   text-align: center;
 }
-
+/* sets display, margin and max width for the section images */
 section img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
-
+/* sets margin, padding and height for the selected id classes */
+/* sets font family for selected id classes */
+/* sets background color for selected id classes*/
 #search-engine-optimization,
 #online-reputation-management,
 #social-media-marketing {
@@ -101,24 +104,26 @@ section img {
   background-color: #0072bb;
   color: #ffffff;
 }
+/* floats images in selected id classes to the left */
 #search-engine-optimization img,
 #social-media-marketing img {
   max-height: 200px;
   float: left;
   margin-right: 25px;
 }
-
+/* floats images in selected id classes to the right */
 #online-reputation-management img {
   max-height: 200px;
   float: right;
   margin-left: 25px;
 }
+/*sets margin and font size for h2 children in article elements */
 article h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
-
-/*changed class to element */
+/*sets padding, alignment, and font for the footer*/
+/* clears floating objects away from both sides of footer */
 footer {
   padding: 30px;
   clear: both;
@@ -126,7 +131,7 @@ footer {
     "Lucida Sans", Arial, sans-serif;
   text-align: center;
 }
-
+/* sets font size for h2 child in footer element */
 footer h2 {
   font-size: 20px;
 }
